@@ -256,12 +256,10 @@ class SignatureServiceTest {
                     "Should return only shared signatures for empty username");
             assertEquals(
                     "shared.jpg",
-                    signatures.getFirst().getFileName(),
+                    signatures.get(0).getFileName(),
                     "Should have the shared signature");
             assertEquals(
-                    "Shared",
-                    signatures.getFirst().getCategory(),
-                    "Should be categorized as shared");
+                    "Shared", signatures.get(0).getCategory(), "Should be categorized as shared");
         }
     }
 
@@ -285,12 +283,10 @@ class SignatureServiceTest {
                     "Should return only shared signatures for non-existent user");
             assertEquals(
                     "shared.jpg",
-                    signatures.getFirst().getFileName(),
+                    signatures.get(0).getFileName(),
                     "Should have the shared signature");
             assertEquals(
-                    "Shared",
-                    signatures.getFirst().getCategory(),
-                    "Should be categorized as shared");
+                    "Shared", signatures.get(0).getCategory(), "Should be categorized as shared");
         }
     }
 }
